<resources>
    <string name="app_name">Crittercism</string>
    <string name="clear">CLEAR</string>
    <string name="other_username">SET USERNAME:</string>
    <string name="other_metadata">SET METADATA (GAME LEVEL):</string>
    <string name="other_breadcrumbs">LEAVE BREADCRUMB:</string>
    <string name="add">Add</string>
    <string name="begin">begin</string>
    <string name="end">end</string>
    <string name="fail">fail</string>
    <string name="incrementValue">value++</string>
    <string name="optOutText">Opt Out</string>
    <string name="optInText">Opt In</string>
    <string name="breadcrumbHello">hello</string>
    <string name="breadcrumbAbc">ABC</string>
    <string name="breadcrumbXyz">XYZ</string>
    <string name="gameLevel1">Level 1</string>
    <string name="gameLevel5">Level 5</string>
    <string name="gameLevel7">Level 7</string>
    <string name="userNameBob">Bob</string>
    <string name="userNameSue">Sue</string>
    <string name="userNameJoe">Joe</string>
    <string name="nullPointerException">NULL POINTER EXCEPTION</string>
    <string name="indexOutOfBoundsException">INDEX OUT OF BOUNDS EXCEPTION</string>
    <string name="jsonException">JSON EXCEPTION</string>
    <string name="illegalArgumentException">Illegal Argument Exception</string>
    <string name="nativeCrash">Native Crash:</string>
    <string name="recursiveNativeCrash">Recursive Native Crash</string>
    <string name="strdupNativeCrash">Strdup Native Crash</string>
    <string name="cppNativeCrash">CPP Native Crash</string>
    <string name="customizeStackTrace">CUSTOMIZE THE STACK TRACE:</string>
    <string name="handledExceptions">HANDLE EXCEPTION:</string>
    <string name="forceCrash">FORCE CRASH:</string>
    <string name="chooseConnectionType">CHOOSE CONNECTION TYPE:</string>
    <string name="okHttp">OkHttp</string>
    <string name="apacheHttpClient">Apache HttpClient</string>
    <string name="httpUrlConnection">HttpURLConnection</string>
    <string name="chooseProtocol">CHOOSE PROTOCOL:</string>
    <string name="http">HTTP</string>
    <string name="https">HTTPS</string>
    <string name="punchIt">PUNCH IT:</string>
    <string name="get1Byte">GET 1b</string>
    <string name="get1Kb">GET 1kb</string>
    <string name="get1Mb">GET 1mb</string>
    <string name="post1Byte">POST 1b</string>
    <string name="post1Kb">POST 1KB</string>
    <string name="post1Mb">POST 1MB</string>
    <string name="latency1sec">Latency 1s</string>
    <string name="latency3s">Latency 3s</string>
    <string name="latency5s">Latency 5s</string>
    <string name="status200">200 Status</string>
    <string name="status404">404 Status</string>
    <string name="status500">500 STATUS</string>
    <string name="responses">RESPONSES:</string>
</resources>
