<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:verticalScrollbarPosition="right">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efeff4"
        android:layout_gravity="start"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:focusable="false"
        android:text="@string/forceCrash"
        android:id="@+id/forceCrashLabel"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nullPointerException"
        android:id="@+id/nullPointerCrashButton"
        android:gravity="center_vertical|start"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indexOutOfBoundsException"
        android:id="@+id/indexOutOfBoundsCrashButton"
        android:gravity="center_vertical|start"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efeff4"
        android:layout_gravity="start"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:focusable="false"
        android:text="@string/handledExceptions"
        android:id="@+id/handledExceptionLabel"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jsonException"
        android:id="@+id/jsonExceptionButton"
        android:gravity="center_vertical|start" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/illegalArgumentException"
        android:id="@+id/illegalArgumentExceptionButton"
        android:gravity="center_vertical|start"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efeff4"
        android:layout_gravity="start"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:focusable="false"
        android:text="@string/customizeStackTrace"
        android:id="@+id/customizeStackTraceTextView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stackFramesLayout"></LinearLayout>

    <LinearLayout
        android:padding="10sp"
        android:baselineAligned="false"
        android:id="@+id/errorButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:layout_weight="0"
            android:text="@string/add"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:layout_weight="0"
            android:text="@string/clear"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

    </LinearLayout>
</LinearLayout>
